api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-external-service 
  namespace: api-gw
spec:
  type: ExternalName
  externalName: linux.local
  ports:
  - port: 8080
    targetPort: 8080
