api-gateway/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-route
  namespace: api-gw
spec:
  parentRefs:
    - name: central-api-gateway
      namespace: istio-ingress
  hostnames:
    - demo-gw.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /echo/v1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /echo/
      backendRefs:
        - kind: Service
          name: echo-external-service
          port: 8080
          namespace: api-gw
